--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <p>We need some contect here</p>
+    <p>We need some content here</p>
+    <p>This is my grand paraphrase where I am adding much needed content</p>
   </body>
 </html>
