Update index.html 3

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>We need some content here</p>
     <p>This is my grand paraphrase where I am adding much needed content</p>
     <p>This is my 2nd grand paraphrase where I am adding much needed content</p>
+    <p>This is my 3rd grand paraphrase where I am adding much needed content</p>
   </body>
 </html>
